--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="icon"><img src="img/html.png" alt="HTML5"></div>
                 <div class="icon"><img src="img/js.png" alt="JavaScript"></div>
                 <div class="icon"><img src="img/tailwind.png" alt="Tailwind"></div>
-                <div class="icon"><img src="img/Bootstrap.png" alt="Bootstrap"></div>
+                <div class="icon"><img src="img/bootstrap.png" alt="Bootstrap"></div>
                 <div class="icon"><img src="img/react.png" alt="React"></div>
                 <div class="icon"><img src="img/ci.png" alt="Codeigniter"></div>
                 <div class="icon"><img src="img/php.png" alt="PHP"></div>
